# ARCANIS-OS

./: .digital_twin.json  .gitignore  DESIGN.md  README.md  demo.py  demo_run.py  setup.py
00_Documentation/: CHANGELOG.md  (+3 more)
05_ArcanisBuild/: .gitignore  README.md  arcanis.json  pyproject.toml
05_ArcanisBuild/docs/: arcanislang.md  cli.md  configuration.md  overview.md
05_ArcanisBuild/examples/hello_world/: arcanis.json  build.yaml
05_ArcanisBuild/src/arcanis_build/: __init__.py  __main__.py  cache.py  cli.py  config.py  dependency.py  docsgen.py  engine.py  errors.py  logger.py  parallel.py  tester.py
05_ArcanisBuild/tests/: __init__.py  test_cache.py  test_config.py  test_dependency.py  test_docsgen.py  test_engine.py  test_errors.py  test_logger.py  test_parallel.py  test_tester.py
09_ArcanisBrain/: README.md  pyproject.toml  setup.py
09_ArcanisBrain/arcanis_brain/: __init__.py  config.py
09_ArcanisBrain/arcanis_brain/agents/: __init__.py  communicator.py  delegator.py  registry.py  tools.py
09_ArcanisBrain/arcanis_brain/api/: __init__.py  graphql.py  rest.py  websocket.py
09_ArcanisBrain/arcanis_brain/core/: __init__.py  engine.py  events.py  types.py
09_ArcanisBrain/arcanis_brain/memory/: __init__.py  knowledge.py  long_term.py  preferences.py  short_term.py
09_ArcanisBrain/arcanis_brain/personality/: __init__.py  adaptation.py  context.py  style.py
09_ArcanisBrain/arcanis_brain/reasoning/: __init__.py  decision.py  planner.py  solver.py
09_ArcanisBrain/arcanis_brain/security/: __init__.py  audit.py  permissions.py  sandbox.py
09_ArcanisBrain/docs/: architecture.md  index.md
09_ArcanisBrain/docs/api/: reference.md
09_ArcanisBrain/docs/modules/: agents.md  memory.md  personality.md  reasoning.md  security.md
09_ArcanisBrain/examples/: basic_usage.py
09_ArcanisBrain/tests/: test_agents.py  test_memory.py  test_personality.py  test_reasoning.py  test_security.py
10_ArcanisAgents/: README.md  pyproject.toml
10_ArcanisAgents/arcanis_agents/: __init__.py
10_ArcanisAgents/arcanis_agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
10_ArcanisAgents/arcanis_agents/agents/: __init__.py  automation.py  base_agent.py  developer.py  research.py  security.py  system.py
10_ArcanisAgents/arcanis_agents/api/: __init__.py  rest.py
10_ArcanisAgents/arcanis_agents/core/: __init__.py  agent.py  factory.py  message_bus.py  orchestrator.py  permissions.py  shared_memory.py
10_ArcanisAgents/examples/: agent_factory.py  basic_collaboration.py  communication_protocol.py
10_ArcanisAgents/tests/: test_comprehensive.py  test_framework.py
12_ArcanisShell/: .gitignore  LICENSE  README.md  VERSION.md  pyproject.toml  script.c  script.h
12_ArcanisShell/docs/: api.md  architecture.md  examples.md
12_ArcanisShell/src/arcanis_shell/: __init__.py  ai_interface.py  commands.py  config.py  engine.py  errors.py  inference_adapter.py  integration.py  main.py  nl_enhancements.py  parser.py  script.py  types.py
12_ArcanisShell/tests/: test_core.py  test_extended.py
13_ArcanisAutomation/: README.md  pyproject.toml
13_ArcanisAutomation/arcanis_automation/: __init__.py  cli.py  config.py
13_ArcanisAutomation/arcanis_automation/actions/: __init__.py  builtins.py
13_ArcanisAutomation/arcanis_automation/ai/: __init__.py  capabilities.py  providers.py
13_ArcanisAutomation/arcanis_automation/api/: __init__.py  python_api.py  rest_api.py
13_ArcanisAutomation/arcanis_automation/core/: __init__.py  engine.py  models.py
13_ArcanisAutomation/arcanis_automation/scheduler/: __init__.py  loop.py
13_ArcanisAutomation/arcanis_automation/security/: __init__.py  guard.py
13_ArcanisAutomation/automation_store/: wf_318d7f731553.json  wf_5593dc2441c3.json  wf_815f16d5e269.json  wf_ai_27762652.json  wf_ai_41162089.json  wf_ai_43096834.json  wf_ai_43571104.json  wf_ai_46778559.json  wf_ai_81654224.json  wf_c3ed18f6c1dd.json  wf_d655f6f1fe46.json
13_ArcanisAutomation/docs/: api.md  architecture.md  workflow-format.md
13_ArcanisAutomation/examples/: file_organization.json  research_workflow.json
13_ArcanisAutomation/tests/: test_engine.py  test_extended.py
14_ArcanisVoice/: README.md  config.yaml  pyproject.toml  requirements.txt
14_ArcanisVoice/arcanis_voice/: __init__.py  __main__.py  api.py  asr.py  audio_io.py  brain.py  cli.py  config.py  noise_filter.py  pipeline.py  test_tools.py  tts.py  utils.py  wake_word.py
14_ArcanisVoice/docs/: README.md
14_ArcanisVoice/tests/: test_voice.py
15_ArcanisVision/: pyproject.toml
15_ArcanisVision/arcanis_vision/: __init__.py  config.py  detector.py  image.py  screen.py  utils.py
15_ArcanisVision/arcanis_vision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
15_ArcanisVision/tests/: test_vision.py
19_ArcanisDrivers/ArcanisDrivers/: .gitignore  CMakeLists.txt  Makefile
19_ArcanisDrivers/ArcanisDrivers/docs/: README.md
19_ArcanisDrivers/ArcanisDrivers/examples/: main.c
22_ArcanisAIScheduler/: pyproject.toml
22_ArcanisAIScheduler/arcanis_ai_scheduler/: __init__.py  predictor.py  scheduler.py  tracker.py
22_ArcanisAIScheduler/tests/: test_scheduler.py
33_ArcanisDevAPI/: pyproject.toml
33_ArcanisDevAPI/arcanis_devapi/: __init__.py  contracts.py  gateway.py
33_ArcanisDevAPI/tests/: test_gateway.py
41_ArcanisSemanticFS/: DESIGN.md  README.md  pyproject.toml
41_ArcanisSemanticFS/arcanis_semantic_fs/: __init__.py  config.py  engine.py  indexer.py  storage.py
41_ArcanisSemanticFS/tests/: test_engine.py
50_ArcanisSecurity/: README.md  crypto.c  crypto.h  password_mgr.c  password_mgr.h  pyproject.toml
50_ArcanisSecurity/arcanis_security/: __init__.py  capability.py  manager.py
50_ArcanisSecurity/tests/: test_capability.py
60_ArcanisInference/: README.md  pyproject.toml
60_ArcanisInference/arcanis_inference/: __init__.py  cli.py  config.py  engine.py
60_ArcanisInference/tests/: test_engine.py
90_ArcanisHAL/: README.md  pci.c  pci.h  pyproject.toml
90_ArcanisHAL/arcanis_hal/: __init__.py  device.py  hal.py  universal_driver.py
90_ArcanisHAL/tests/: test_hal.py
(+1182 files in other folders)
