[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arcanis-brain"
version = "0.1.0"
description = "The intelligence layer of the Arcanis ecosystem — a modular AI system with reasoning, memory, agents, personality, and security modules."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Arcanis Lab" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "reasoning", "memory", "llm", "framework"]

dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.23", "strawberry-graphql>=0.180", "websockets>=11"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[tool.setuptools.packages.find]
include = ["arcanis_brain*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
