[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcanis-agents"
version = "0.1.0"
description = "Multi-agent collaboration framework"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["arcanis*"]