[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arcanis-automation"
version = "0.1.0"
description = "Workflow automation engine for the Arcanis ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "All rights reserved" }
authors = [{ name = "Sagar Makani", email = "arcanis@labs" }]
dependencies = []

[project.optional-dependencies]
rest = ["flask"]
ai = ["openai"]
cron = ["croniter"]
dev = ["pytest"]

[project.scripts]
arcanis-automation = "arcanis_automation.cli:main"

[tool.setuptools.packages.find]
include = ["arcanis_automation*"]
