[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "arcanis-voice"
version = "0.1.0"
description = "Natural, privacy-focused voice interaction system"
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["arcanis_voice*"]

[project.scripts]
arcanis-voice = "arcanis_voice.cli:main"
