[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "arcanis-vision"
version = "0.1.0"
description = "Computer vision system for image processing, object detection, and screen understanding"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "numpy>=1.21",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["arcanis_vision*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
