[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arcanis-devapi"
version = "0.1.0"
description = "Stable developer API contracts for Arcanis ecosystem"
requires-python = ">=3.10"
authors = [{name = "Sagar Makani"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["arcanis_devapi*"]
