[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arcanis-semantic-fs"
version = "0.1.0"
description = "AI-powered semantic file system for the Arcanis ecosystem"
readme = "README.md"
license = {text = "All rights reserved"}
requires-python = ">=3.10"
authors = [{name = "Sagar Makani"}]
dependencies = []

[project.optional-dependencies]
ai = ["sentence-transformers>=2.2.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["arcanis_semantic_fs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
